Don't try to use the proxy after it is destroyed

https://bugzilla.gnome.org/show_bug.cgi?id=608089